<resources>
    <string name="app_name">Turnierwart</string>
    <string name="action_settings">Settings</string>
    <string name="header">Meine Turniere</string>
    <string name="version">1.0</string>
    <string name="general_info">Allgemeine Informationen</string>
    <string name="delete_tournament">Löschen</string>
    <string name="safety_delete_tournament_question">Möchten Sie dieses Turnier wirklich löschen?</string>
    <string name="safety_delete_tournament_title">Turnier löschen</string>
    <string name="delete">Löschen</string>
    <string name="abort">Abbruch</string>
    <string name="tournament_hint_name">Name des Turniers</string>
    <string name="tournament_hint_ort">Ort</string>
    <string name="tournament_hint_ausrichter">Ausrichter</string>
    <string name="tournament_hint_start">Start</string>
    <string name="tournament_hint_ende">Ende</string>
    <string name="specific_info">Spezielle Informationen</string>
    <string name="tournament_hint_win">Punkte für einen Sieg</string>
    <string name="tournament_hint_remis">Punkte für ein Remis</string>
    <string name="tournament_hint_groups">Anzahl der Gruppen</string>
    <string name="no_tournament">Keine Turniere angelegt</string>
    <string name="teams">Teams (1 pro Zeile)</string>
    <string name="drag_team_to_group_info">Bitte ziehe die offenen Teams von Links auf ihre jeweilige Gruppe.</string>
    <string name="reset_db">Reset db</string>
</resources>
